--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 
 <body>
     <link rel="preload" as="image" href="./images/faith-logo-small_result.webp">
+    <link rel="preload" as="image" href="./images/faith-logo_result.webp">
     <div>
         <center>
-            <img class="logo" src="./images/faith-logo-small_result.webp" alt="Hand drawn side image of Faith Kim">
+            <picture>
+                <source class="logo" media="(max-width: 600px)" srcset="./images/faith-logo-small_result.webp">
+                <source class="logo" media="(min-width: 601px)" srcset="./images/faith-logo_result.webp">
+                <img aria-hidden="true" loading="lazy" decoding="async" class="logo" src="./images/faith-logo-small_result.webp" alt="Hand drawn side image of Faith Kim">
+            </picture>
             <div>
                 <h1 class="typewriter">Faith Kim</h1>
             </div>
@@ -41,9 +46,9 @@
         </center>
          <!-- Footer -->
          <div class="center-container">
-            <a href="https://www.linkedin.com/in/faith-kim/"><img class="footer-icon" src="./images/linkedin_result.webp" alt="Social media to LinkedIn"/></a>
-            <a href="https://www.instagram.com/thefaithyk/"><img class="footer-icon" src="./images/instagram_result.webp" alt="Social media to Instagram"/></a>
-            <a href="https://github.com/faithkdev"><img class="footer-icon" src="./images/github_result.webp" alt="Social media to Github"/></a>
+            <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon" src="./images/linkedin_result.webp" alt="Social media to LinkedIn"/></a>
+            <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon" src="./images/instagram_result.webp" alt="Social media to Instagram"/></a>
+            <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp" alt="Social media to Github"/></a>
         </div>
     </div>
 </body>
