--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <picture>
                 <source class="logo" media="(max-width: 600px)" srcset="./images/faith-logo-small_result.webp">
                 <source class="logo" media="(min-width: 601px)" srcset="./images/faith-logo_result.webp">
-                <img aria-hidden="true" loading="lazy" decoding="async" class="logo" src="./images/faith-logo-small_result.webp" alt="Hand drawn side image of Faith Kim">
+                <img aria-hidden="true" loading="lazy" decoding="async" class="logo"
+                    src="./images/faith-logo-small_result.webp" alt="Hand drawn side image of Faith Kim">
             </picture>
             <div>
                 <h1 class="typewriter">Faith Kim</h1>
@@ -28,27 +29,36 @@
             <!-- buttons -->
             <div class="center-container">
                 <div class="button-shadow">
-                    <button class="button">
-                        About me
-                    </button>
+                    <a class="button" href="about.html">
+                        <p class="button-text">
+                            About me
+                        </p>
+                    </a>
                 </div>
                 <div class="button-shadow">
-                    <button class="button">
-                        Projects
-                    </button>
+                    <a class="button">
+                        <p class="button-text">
+                            Projects
+                        </p>
+                    </a>
                 </div>
                 <div class="button-shadow">
-                    <button class="button">
-                        Buy my book
-                    </button>
+                    <a class="button">
+                        <p class="button-text">
+                            Buy my book
+                        </p>
+                    </a>
                 </div>
             </div>
         </center>
-         <!-- Footer -->
-         <div class="center-container">
-            <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon" src="./images/linkedin_result.webp" alt="Social media to LinkedIn"/></a>
-            <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon" src="./images/instagram_result.webp" alt="Social media to Instagram"/></a>
-            <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp" alt="Social media to Github"/></a>
+        <!-- Footer -->
+        <div class="center-container">
+            <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon"
+                    src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a>
+            <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon"
+                    src="./images/instagram_result.webp" alt="Social media to Instagram" /></a>
+            <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
+                    src="./images/github_result.webp" alt="Social media to Github" /></a>
         </div>
     </div>
 </body>
