make buttons more interactive

--- a/index.html
+++ b/index.html
@@ -28,27 +28,21 @@
             </div>
             <!-- buttons -->
             <div class="center-container">
-                <div class="button-shadow">
-                    <a class="button" href="about.html">
-                        <p class="button-text">
-                            About me
-                        </p>
-                    </a>
-                </div>
-                <div class="button-shadow">
-                    <a class="button">
-                        <p class="button-text">
-                            Projects
-                        </p>
-                    </a>
-                </div>
-                <div class="button-shadow">
-                    <a class="button">
-                        <p class="button-text">
-                            Buy my book
-                        </p>
-                    </a>
-                </div>
+                <a class="button" href="about.html">
+                    <p class="button-text">
+                        About me
+                    </p>
+                </a>
+                <a class="button">
+                    <p class="button-text">
+                        Projects
+                    </p>
+                </a>
+                <a class="button">
+                    <p class="button-text">
+                        Buy my book
+                    </p>
+                </a>
             </div>
         </center>
         <!-- Footer -->
@@ -61,6 +55,7 @@
                     src="./images/github_result.webp" alt="Social media to Github" /></a>
         </div>
     </div>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
