--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css" </head>
 
 <body>
+    <link rel="preload" as="image" href="./images/profilepic_result.webp">
+    <link rel="preload" as="image" href="./images/profilepic_small_result.webp">
     <div class="main-container">
         <div class="heading">
             <h1 class="typewriter">About Faith</h1>
@@ -20,6 +22,14 @@
         </div>
         <div class="main-content">
             Hello world
+            <div class="float-right-picture">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="./images/profilepic_small_result.webp">
+                    <source media="(min-width: 601px)" srcset="./images/profilepic_result.webp">
+                    <img aria-hidden="true" loading="lazy" decode="async" src="./images/profilepic.jpg">
+                </picture>
+            </div>
+
         </div>
     </div>
 </body>
