make it responsive

--- a/about.html
+++ b/about.html
@@ -18,19 +18,45 @@
         <div class="heading">
             <h1 class="typewriter">About Faith</h1>
             <a href="index.html">
-                <img id=" home-icon" src="./images/homeicon.webp" loading="lazy" decode="async"
-                alt="Return to home">
+                <img id=" home-icon" src="./images/homeicon.webp" loading="lazy" decode="async" alt="Return to home">
             </a>
         </div>
         <div class="main-content">
-            Hello world
-            <picture class="float-right-picture">
-                <source class="float-right-picture" media="(max-width: 600px)"
-                    srcset="./images/profilepic_small_result.webp">
-                <source class="float-right-picture" media="(min-width: 601px)" srcset="./images/profilepic_result.webp">
-                <img class="float-right-picture" aria-hidden="true" loading="lazy" decode="async"
-                    src="./images/profilepic.jpg">
-            </picture>
+            <div class="description">
+                <p>Name: Faith Kim</p>
+                <p>Pronouns: She/her</p>
+                <p>Education: Smith College Class of 2019</p>
+                <a href="https://medium.com/@thefaithkim">
+                    Medium Blog
+                </a>
+                <p>
+                    Hi! My name is Faith, and I am a full stack software engineer 
+                    with a background in backend. I graduated from Smith College in May 2019 
+                    with a B.A. in Computer Science and a minor in Mathematics.
+                </p>
+                <p>
+                    I first started out using Java and Spring in my professional career, 
+                    and now I'm using Django (Python) and ReactJS with Typescript in my day-to-day. 
+                    I'm also interested in game development and have made games for school projects in the past.
+                </p>
+                <p>
+                    My true passion lies in mentorship for womxn of color in the tech industry. 
+                    I have worked as the Vice President of Smith College's Computer Science organization, 
+                    Smithies in CS, in hopes of creating a comfortable and inclusive space for students of 
+                    all background to learn about tech and computer science. I hope to garner my skills 
+                    and experience in the tech industry to offer more helpful resources to womxn in tech.
+                </p>
+            </div>
+            <div>
+                <picture class="float-right-picture">
+                    <source class="float-right-picture" media="(max-width: 600px)"
+                        srcset="./images/profilepic_small_result.webp">
+                    <source class="float-right-picture" media="(min-width: 601px)"
+                        srcset="./images/profilepic_result.webp">
+                    <img class="float-right-picture" aria-hidden="true" loading="lazy" decode="async"
+                        src="./images/profilepic.jpg" alt="Profile picture of Faith">
+                </picture>
+            </div>
         </div>
 
     </div>
