layout +git ignore

--- a/about.html
+++ b/about.html
@@ -30,24 +30,24 @@
                     Medium Blog
                 </a>
                 <p>
-                    Hi! My name is Faith, and I am a full stack software engineer 
-                    with a background in backend. I graduated from Smith College in May 2019 
+                    Hi! My name is Faith, and I am a full stack software engineer
+                    with a background in backend. I graduated from Smith College in May 2019
                     with a B.A. in Computer Science and a minor in Mathematics.
                 </p>
                 <p>
-                    I first started out using Java and Spring in my professional career, 
-                    and now I'm using Django (Python) and ReactJS with Typescript in my day-to-day. 
+                    I first started out using Java and Spring in my professional career,
+                    and now I'm using Django (Python) and ReactJS with Typescript in my day-to-day.
                     I'm also interested in game development and have made games for school projects in the past.
                 </p>
                 <p>
-                    My true passion lies in mentorship for womxn of color in the tech industry. 
-                    I have worked as the Vice President of Smith College's Computer Science organization, 
-                    Smithies in CS, in hopes of creating a comfortable and inclusive space for students of 
-                    all background to learn about tech and computer science. I hope to garner my skills 
+                    My true passion lies in mentorship for womxn of color in the tech industry.
+                    I have worked as the Vice President of Smith College's Computer Science organization,
+                    Smithies in CS, in hopes of creating a comfortable and inclusive space for students of
+                    all background to learn about tech and computer science. I hope to garner my skills
                     and experience in the tech industry to offer more helpful resources to womxn in tech.
                 </p>
             </div>
-            <div>
+            <div id="" profile-picture>
                 <picture class="float-right-picture">
                     <source class="float-right-picture" media="(max-width: 600px)"
                         srcset="./images/profilepic_small_result.webp">
@@ -58,7 +58,43 @@
                 </picture>
             </div>
         </div>
-
+        <div id="featured-in">
+            <center>
+                <h1 class="typewriter">Featured In</h1>
+            </center>
+            <div class="articles">
+                <div class="article">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="./images/smitharticle.webp">
+                        <source media="(min-width: 601px)" srcset="./images/smitharticle_result.webp">
+                        <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
+                            src="./images/smitharticle.png">
+                    </picture>
+                    <p class="description">An article on Faith's life as a Smith College student</p>
+                </div>
+                <div class="article">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="./images/gaminglabarticle_small_result.webp">
+                        <source media="(min-width: 601px)" srcset="./images/gaminglabarticle_result.webp">
+                        <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
+                            srcset="./images/gaminglabarticle.png">
+                    </picture>
+                    <p class="description">Learn more about the Gaming Lab at Smith College, where students can play
+                        video games from indie
+                        to AAA games!</p>
+                </div>
+                <div class="article">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="./images/reigningit_small_result.webp">
+                        <source media="(min-width: 601px)" srcset="./images/reigningit_result.webp">
+                        <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
+                            src="./images/reigningit.png">
+                    </picture>
+                    <p class="description">Learn more about Faith's journey into her earlier career in tech as a
+                        Computer Science student! </p>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
 </body>
