--- a/about.html
+++ b/about.html
@@ -47,14 +47,14 @@
                     and experience in the tech industry to offer more helpful resources to womxn in tech.
                 </p>
             </div>
-            <div id="" profile-picture>
+            <div>
                 <picture class="float-right-picture">
                     <source class="float-right-picture" media="(max-width: 600px)"
-                        srcset="./images/profilepic_small_result.webp">
+                        srcset="./images/about/profilepic_small_result.webp">
                     <source class="float-right-picture" media="(min-width: 601px)"
-                        srcset="./images/profilepic_result.webp">
+                        srcset="./images/about/profilepic_result.webp">
                     <img class="float-right-picture" aria-hidden="true" loading="lazy" decode="async"
-                        src="./images/profilepic.jpg" alt="Profile picture of Faith">
+                        src="./images/about/profilepic.jpg" alt="Profile picture of Faith">
                 </picture>
             </div>
         </div>
@@ -65,19 +65,19 @@
             <div class="articles">
                 <div class="article">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="./images/smitharticle.webp">
-                        <source media="(min-width: 601px)" srcset="./images/smitharticle_result.webp">
+                        <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
+                        <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp">
                         <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
-                            src="./images/smitharticle.png">
+                            src="./images/about/smitharticle.png">
                     </picture>
                     <p class="description">An article on Faith's life as a Smith College student</p>
                 </div>
                 <div class="article">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="./images/gaminglabarticle_small_result.webp">
-                        <source media="(min-width: 601px)" srcset="./images/gaminglabarticle_result.webp">
+                        <source media="(max-width: 600px)" srcset="./images/about/gaminglabarticle_small_result.webp">
+                        <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp">
                         <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
-                            srcset="./images/gaminglabarticle.png">
+                            srcset="./images/about/gaminglabarticle.png">
                     </picture>
                     <p class="description">Learn more about the Gaming Lab at Smith College, where students can play
                         video games from indie
@@ -85,10 +85,10 @@
                 </div>
                 <div class="article">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="./images/reigningit_small_result.webp">
-                        <source media="(min-width: 601px)" srcset="./images/reigningit_result.webp">
+                        <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
+                        <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp">
                         <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
-                            src="./images/reigningit.png">
+                            src="./images/about/reigningit.png">
                     </picture>
                     <p class="description">Learn more about Faith's journey into her earlier career in tech as a
                         Computer Science student! </p>
