--- a/about.html
+++ b/about.html
@@ -94,6 +94,15 @@
                         Computer Science student! </p>
                 </div>
             </div>
+            <!-- Footer -->
+            <div class="center-container">
+                <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a>
+                <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/instagram_result.webp" alt="Social media to Instagram" /></a>
+                <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/github_result.webp" alt="Social media to Github" /></a>
+            </div>
         </div>
     </div>
     </div>
