--- a/about.html
+++ b/about.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="./css/styles.css" </head>
 
 <body>
-    <link rel="preload" as="image" href="./images/profilepic_result.webp">
-    <link rel="preload" as="image" href="./images/profilepic_small_result.webp">
+    <link rel="preload" as="image" href="./images/about/profilepic_result.webp">
+    <link rel="preload" as="image" href="./images/about/profilepic_small_result.webp">
     <div class="main-container fade">
         <div class="heading">
             <h1 class="typewriter">About Faith</h1>
             <a href="index.html">
-                <img id=" home-icon" src="./images/homeicon.webp" loading="lazy" decode="async" alt="Return to home">
+                <img class="footer-icon" src="./images/homeicon.webp" loading="lazy" decode="async"
+                    alt="Return to home">
             </a>
         </div>
         <div class="main-content">
@@ -63,45 +64,56 @@
                 <h1 class="typewriter">Featured In</h1>
             </center>
             <div class="articles">
-                <div class="article">
-                    <picture>
-                        <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
-                        <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp">
-                        <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
-                            src="./images/about/smitharticle.png">
-                    </picture>
-                    <p class="description">An article on Faith's life as a Smith College student</p>
-                </div>
-                <div class="article">
-                    <picture>
-                        <source media="(max-width: 600px)" srcset="./images/about/gaminglabarticle_small_result.webp">
-                        <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp">
-                        <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
-                            srcset="./images/about/gaminglabarticle.png">
-                    </picture>
-                    <p class="description">Learn more about the Gaming Lab at Smith College, where students can play
-                        video games from indie
-                        to AAA games!</p>
-                </div>
-                <div class="article">
-                    <picture>
-                        <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
-                        <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp">
-                        <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
-                            src="./images/about/reigningit.png">
-                    </picture>
-                    <p class="description">Learn more about Faith's journey into her earlier career in tech as a
-                        Computer Science student! </p>
-                </div>
+                <a href="https://www.smith.edu/profile/faith-kim">
+                    <div class="article">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="./images/about/smitharticle.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/smitharticle_result.webp">
+                            <img alt="Smith College article on Faith Kim" loading="lazy" decode="async"
+                                src="./images/about/smitharticle.png">
+                        </picture>
+                        <p class="description">An article on Faith's life as a Smith College student</p>
+                    </div>
+                </a>
+                <a href="https://tinyurl.com/gaminglabatsmith">
+                    <div class="article">
+                        <picture>
+                            <source media="(max-width: 600px)"
+                                srcset="./images/about/gaminglabarticle_small_result.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/gaminglabarticle_result.webp">
+                            <img alt="Article on Smith College video game lab" loading="lazy" decode="async"
+                                srcset="./images/about/gaminglabarticle.png">
+                        </picture>
+                        <p class="description">Learn more about the Gaming Lab at Smith College, where students can play
+                            video games from indie
+                            to AAA games!</p>
+                    </div>
+                </a>
+                <a href="https://reinvented-magazine.medium.com/women-who-reign-faith-kim-1360a26c5c3b">
+                    <div class="article">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="./images/about/reigningit_small_result.webp">
+                            <source media="(min-width: 601px)" srcset="./images/about/reigningit_result.webp">
+                            <img alt="Article on Faith Kim the woman in technology" loading="lazy" decode="async"
+                                src="./images/about/reigningit.png">
+                        </picture>
+                        <p class="description">Learn more about Faith's journey into her earlier career in tech as a
+                            Computer Science student! </p>
+                    </div>
+                </a>
             </div>
             <!-- Footer -->
-            <div class="center-container">
-                <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon"
-                        src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a>
-                <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon"
-                        src="./images/instagram_result.webp" alt="Social media to Instagram" /></a>
-                <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
-                        src="./images/github_result.webp" alt="Social media to Github" /></a>
+            <div class="footer">
+                <div class="center-container">
+                    <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async"
+                            class="footer-icon" src="./images/linkedin_result.webp"
+                            alt="Social media to LinkedIn" /></a>
+                    <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async"
+                            class="footer-icon" src="./images/instagram_result.webp"
+                            alt="Social media to Instagram" /></a>
+                    <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
+                            src="./images/github_result.webp" alt="Social media to Github" /></a>
+                </div>
             </div>
         </div>
     </div>
