--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
             </div>
         </center>
         <!-- Footer -->
-        <div class="center-container">
-            <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon"
-                    src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a>
-            <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon"
-                    src="./images/instagram_result.webp" alt="Social media to Instagram" /></a>
-            <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
-                    src="./images/github_result.webp" alt="Social media to Github" /></a>
+        <div class="footer">
+            <div class="center-container">
+                <a href="https://www.linkedin.com/in/faith-kim/"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/linkedin_result.webp" alt="Social media to LinkedIn" /></a>
+                <a href="https://www.instagram.com/thefaithyk/"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/instagram_result.webp" alt="Social media to Instagram" /></a>
+                <a href="https://github.com/faithkdev"><img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/github_result.webp" alt="Social media to Github" /></a>
+            </div>
         </div>
     </div>
     <script src="./js/scripts.js"></script>
 </body>
+
 </html>
