create projects page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         About me
                     </p>
                 </a>
-                <a class="button">
+                <a class="button" href="projects.html">
                     <p class="button-text">
                         Projects
                     </p>
