add link to amazon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         Projects
                     </p>
                 </a>
-                <a class="button">
+                <a class="button" href="https://tinyurl.com/apieceofjava">
                     <p class="button-text">
                         Buy my book
                     </p>
