animate heading to the right

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         </div>
         <div class="main-content">
             <div class="description">
-                <h1>Technical Work</h1>
+                <h1 class="floatToRight">Technical Work</h1>
                 <p>I currently work as a fullstack engineer at CaptivateIQ. I work
                     on creating new features to help customers calculate sales commissions, working on
                     improving the existing UI and creating new UI features, building new API's, and optimizing the
@@ -37,7 +37,10 @@
                     Trade Execution division supporting applications that calculate settlement prices for a variety
                     of
                     products/contracts, where
-                    we mainly use Java and Spring for our backend framework, Oracle for database. I worked closely
+                    we mainly use Java and Spring for our backend framework, Oracle for database.
+                </p>
+                <p>
+                    I worked closely
                     with
                     our business team to develop new settlement algorithms, support app maintenance in production,
                     and
@@ -47,10 +50,8 @@
             </div>
             <div>
                 <picture class="picture-blocks">
-                    <source media="(max-width:600px)"
-                        srcset="./images/projects/captivateiq_small_result.webp">
-                    <source  media="(min-width:601px)"
-                        srcset="./images/projects/captivateiq_large_result.webp">
+                    <source media="(max-width:600px)" srcset="./images/projects/captivateiq_small_result.webp">
+                    <source media="(min-width:601px)" srcset="./images/projects/captivateiq_large_result.webp">
                     <img src="./images/projects/captivateiq.jpg">
                 </picture>
                 <picture class="picture-blocks">
