add project grid

--- a/projects.html
+++ b/projects.html
@@ -24,43 +24,69 @@
             </a>
         </div>
         <div class="main-content">
-            <div class="description">
-                <h1 class="floatToRight">Technical Work</h1>
-                <p>I currently work as a fullstack engineer at CaptivateIQ. I work
-                    on creating new features to help customers calculate sales commissions, working on
-                    improving the existing UI and creating new UI features, building new API's, and optimizing the
-                    performance
-                    of our application. Our tech stack is Django, React, and PostgreSQL.
-                </p>
-                <p>
-                    Previously, I worked as a backend software engineer for CME Group. I worked in the
-                    Trade Execution division supporting applications that calculate settlement prices for a variety
-                    of
-                    products/contracts, where
-                    we mainly use Java and Spring for our backend framework, Oracle for database.
-                </p>
-                <p>
-                    I worked closely
-                    with
-                    our business team to develop new settlement algorithms, support app maintenance in production,
-                    and
-                    deploy
-                    builds with new features to enhance user experience and settlement processes.
-                </p>
-            </div>
-            <div>
-                <picture class="picture-blocks">
-                    <source media="(max-width:600px)" srcset="./images/projects/captivateiq_small_result.webp">
-                    <source media="(min-width:601px)" srcset="./images/projects/captivateiq_large_result.webp">
-                    <img src="./images/projects/captivateiq.jpg">
-                </picture>
-                <picture class="picture-blocks">
-                    <source media="(max-width:600px)" srcset="./images/projects/cme_small_result.webp">
-                    <source media="(min-width:601px)" srcset="./images/projects/cme_large_result.webp">
-                    <img src="./images/projects/cme_jpg.jpg">
-                </picture>
+                <div class="description">
+                    <h1 class="floatToRight">Technical Work</h1>
+                    <p>I currently work as a fullstack engineer at CaptivateIQ. I work
+                        on creating new features to help customers calculate sales commissions, working on
+                        improving the existing UI and creating new UI features, building new API's, and optimizing the
+                        performance
+                        of our application. Our tech stack is Django, React, and PostgreSQL.
+                    </p>
+                    <p>
+                        Previously, I worked as a backend software engineer for CME Group. I worked in the
+                        Trade Execution division supporting applications that calculate settlement prices for a variety
+                        of
+                        products/contracts, where
+                        we mainly use Java and Spring for our backend framework, Oracle for database.
+                    </p>
+                    <p>
+                        I worked closely
+                        with
+                        our business team to develop new settlement algorithms, support app maintenance in production,
+                        and
+                        deploy
+                        builds with new features to enhance user experience and settlement processes.
+                    </p>
+                </div>
+                <div>
+                    <picture class="box">
+                        <source media="(max-width:600px)" srcset="./images/projects/captivateiq_small_result.webp">
+                        <source media="(min-width:601px)" srcset="./images/projects/captivateiq_large_result.webp">
+                        <img src="./images/projects/captivateiq.jpg"
+                            alt="a group photo of engineers and product managers from CaptivateIQ">
+                    </picture>
+                    <picture class="box">
+                        <source media="(max-width:600px)" srcset="./images/projects/cme_small_result.webp">
+                        <source media="(min-width:601px)" srcset="./images/projects/cme_large_result.webp">
+                        <img src="./images/projects/cme_jpg.jpg" alt="Picture of a CME Group booth at Grace Hopper">
+                    </picture>
+                </div>
+            <div class="projects-section description">
+                <div>
+                    <h2 class="project-year">2021</h2>
+                    <picture>
+                        <source media="(max-width:600px)" srcset="./images/projects/apieceofjava_small_result.webp">
+                        <source media="(min-width:601px)" srcset="./images/projects/apieceofjava_result.webp">
+                        <img src="./images/projects/apieceofjava.jpeg"
+                            alt="introduction to java book written by Faith Kim called A Piece of Java">
+                    </picture>
+                </div>
+                <div>
+                    <h2>A Piece of Java: Intro to Programming</h2>
+                    <p><i>A Piece of Java</i> is an introductory book that teaches readers how to code in Java.
+                        It is intended to be a friendly guide to readers who are just starting out in programming. I
+                        wanted
+                        to take my passion for coding and teaching to the next level by writing this book. It is
+                        currently available on Amazon
+                        and kindllle. It was an incredibly fun process writing the book and designing the book cover!
+                    </p>
+                    <p>
+                        Tools: Kindle Create, Java, KDP (Kindle Direct Publishing), Procreate
+                    </p>
+                </div>
             </div>
         </div>
+
     </div>
 
 </body>
