add projects section

--- a/projects.html
+++ b/projects.html
@@ -60,10 +60,11 @@
                     <picture>
                         <source media="(max-width:600px)" srcset="./images/projects/cme_small_result.webp">
                         <source media="(min-width:601px)" srcset="./images/projects/cme_large_result.webp">
-                        <img loading="lazy" decode="async" src="./images/projects/cme_jpg.jpg" alt="Picture of a CME Group booth at Grace Hopper">
+                        <img loading="lazy" decode="async" src="./images/projects/cme_jpg.jpg"
+                            alt="Picture of a CME Group booth at Grace Hopper">
                     </picture>
                 </div>
-                </div>
+            </div>
             <div class="projects-section description">
                 <div>
                     <h2 class="project-year">2021</h2>
@@ -92,16 +93,71 @@
                     <picture>
                         <source media="(max-width:600px)" srcset="./images/projects/gaminglab_small_result.webp">
                         <source media="(min-width:601px)" srcset="./images/projects/gaminglab_result.webp">
-                        <img loading="lazy" decode="async" src="./images/projects/gaminglab.png" alt="Picture of the gaming lab web page developed by Faith">
+                        <img loading="lazy" decode="async" src="./images/projects/gaminglab.png"
+                            alt="Picture of the gaming lab web page developed by Faith">
                     </picture>
                 </div>
                 <div>
                     <h2>Gaming Lab Search Engine</h2>
-                    <p>Smith College provides a space to explore video games on campus, varying from consoles like PS4, PC, Nintendo Switch, and so on.
-                        The struggle lied in how to keep track of allt he games the Lab had in its inventory. To solve this problem a search engine
+                    <p>Smith College provides a space to explore video games on campus, varying from consoles like PS4,
+                        PC, Nintendo Switch, and so on.
+                        The struggle lied in how to keep track of allt he games the Lab had in its inventory. To solve
+                        this problem a search engine
                         for the Gaming Lab had been created through this web application.
                     </p>
                     <p>Dev Tools: Spring, PostgreSQL, H2, Heroku, ReactJS, Python</p>
+                </div>
+                <div>
+                    <h2 class="project-year">2018</h2>
+                    <picture>
+                        <source media="(max-width:600px)" srcset="./images/projects/everythingsfine_small_result.webp">
+                        <source media="(min-width:601px)" srcset="./images/projects/everythingsfine_result.webp">
+                        <img loading="lazy" decode="async" src="./images/projects/everythingsfine.jpg"
+                            alt="Video game project by Faith from Smith College using Unity">
+                    </picture>
+                </div>
+                <div>
+                    <h2>Everything's fine: Exploring Mental Health on Campus</h2>
+                    <p>Team: Arabia Simeon (Technical Artist), Raven Gomez (Writer), Jasmine Olivarez (Writer), Faith
+                        Kim (programmer)</p>
+                    <p>
+                        <i>Everything's fine</i> was a semester long student project dedicated to opening up a dialogue
+                        about mental health on
+                        Smith College's campus. The protagonist, Chi, is a student of color who struggles with
+                        atychiphobia, the fear of failure. We explore
+                        Chi's anxiety in a familiar 2D sidescroll gameplay, but we worked to subvert the idea of
+                        "winning" and "speedrunning" through
+                        the entire game for rewards, as one would see in traditional Mario and Sonic games.
+                    </p>
+                    <p>Dev tool: Unity (C#)</p>
+                </div>
+                <div>
+                    <h2 class="project-year">2017</h2>
+                    <div class="deathless-pictures">
+                        <img loading="lazy" decode="async" alt="Deathless main screen"
+                            src="./images/projects/deathlesscover_result.webp">
+                        <img loading="lazy" decode="async" alt="Gameplay of Deathless, a student-run video game"
+                            src="./images/projects/deathless_result.webp">
+                        <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
+                            src="./images/projects/deathless2_result.webp">
+                        <img loading="lazy" decode="async" alt="Another gameplay of Deathless, animated"
+                            src="./images/projects/deathless3_result.webp">
+                    </div>
+                </div>
+                <div>
+                    <h2>Glowlime Games: Deathless</h2>
+                    <p>Team Director: <a href="https://www.linkedin.com/in/siennacornish/">Sienna Cornish</a></p>
+                    <p>
+                        <i>Deathless</i> is an ongoing game project developed and directed by Sienna Cornish. Through
+                        her
+                        mentorship, I was given the opportunity to learn how to work with an existing codebase and
+                        develop features for backend and front-facing components of the game. I have developed
+                        scripts that triggered sound on an event-driven basis, along with developing scripts to
+                        support Wwise audio. I have also added enhancements to the Unity editor to allow for
+                        flexible manipulation of different attributes in a component. I have also developed
+                        animation scripts for items when they are added into the player's inventory.
+                    </p>
+                    <p>Dev tool: Unity, Wwise, Audiokinetic</p>
                 </div>
             </div>
         </div>
