--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,10 @@
                     <p>
                         Tools: Kindle Create, Java, KDP (Kindle Direct Publishing), Procreate
                     </p>
+                    <p><a href="https://tinyurl.com/apieceofjava">Click here to purchase the book</a></p>
+                    <a href="https://medium.com/@thefaithkim/i-published-a-book-and-heres-my-journey-43dbeb10251e">
+                        Click here to view the blog post
+                    </a>
                 </div>
                 <div>
                     <h2 class="project-year">2019</h2>
@@ -106,6 +110,11 @@
                         for the Gaming Lab had been created through this web application.
                     </p>
                     <p>Dev Tools: Spring, PostgreSQL, H2, Heroku, ReactJS, Python</p>
+                    <p>
+                        <a href="https://medium.com/@thefaithkim/csc-400-creating-the-gaming-lab-search-engine-spring-2019-e5041140a5e0">
+                            Click here to view the technical blog
+                        </a>
+                    </p>
                 </div>
                 <div>
                     <h2 class="project-year">2018</h2>
@@ -130,6 +139,24 @@
                         the entire game for rewards, as one would see in traditional Mario and Sonic games.
                     </p>
                     <p>Dev tool: Unity (C#)</p>
+                    <p>
+                        <a href="https://paradoxproduction.itch.io/everythings-fine">
+                            Download the game here
+                        </a>
+                    </p>
+                    <p>
+                        Watch gameplays: 
+                        <a href="https://www.youtube.com/watch?v=9EyGN39U_DY">
+                            Part 1,
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=uPdJTHyRJ8A">
+                            Part 2
+                        </a>
+                    </p>
+                    <a href="https://github.com/faithkim97/aty">
+                        <img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/github_result.webp" alt="Social media to Github">
+                    </a>
                 </div>
                 <div>
                     <h2 class="project-year">2017</h2>
@@ -158,6 +185,10 @@
                         animation scripts for items when they are added into the player's inventory.
                     </p>
                     <p>Dev tool: Unity, Wwise, Audiokinetic</p>
+                    <a href="https://github.com/faithkim97/Deathless">
+                        <img loading="lazy" decode="async" class="footer-icon"
+                        src="./images/github_result.webp" alt="Social media to Github">
+                    </a>
                 </div>
             </div>
         </div>
