--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,8 @@
                     </p>
                     <p>Dev Tools: Spring, PostgreSQL, H2, Heroku, ReactJS, Python</p>
                     <p>
-                        <a href="https://medium.com/@thefaithkim/csc-400-creating-the-gaming-lab-search-engine-spring-2019-e5041140a5e0">
+                        <a
+                            href="https://medium.com/@thefaithkim/csc-400-creating-the-gaming-lab-search-engine-spring-2019-e5041140a5e0">
                             Click here to view the technical blog
                         </a>
                     </p>
@@ -145,7 +146,7 @@
                         </a>
                     </p>
                     <p>
-                        Watch gameplays: 
+                        Watch gameplays:
                         <a href="https://www.youtube.com/watch?v=9EyGN39U_DY">
                             Part 1,
                         </a>
@@ -154,8 +155,8 @@
                         </a>
                     </p>
                     <a href="https://github.com/faithkim97/aty">
-                        <img loading="lazy" decode="async" class="footer-icon"
-                        src="./images/github_result.webp" alt="Social media to Github">
+                        <img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp"
+                            alt="Social media to Github">
                     </a>
                 </div>
                 <div>
@@ -186,10 +187,32 @@
                     </p>
                     <p>Dev tool: Unity, Wwise, Audiokinetic</p>
                     <a href="https://github.com/faithkim97/Deathless">
-                        <img loading="lazy" decode="async" class="footer-icon"
-                        src="./images/github_result.webp" alt="Social media to Github">
+                        <img loading="lazy" decode="async" class="footer-icon" src="./images/github_result.webp"
+                            alt="Social media to Github">
                     </a>
                 </div>
+            </div>
+            <div class="other-works-section">
+                    <h1>Other Works + Resources</h1>
+                    <div class="other-works-grid">
+                        <div class="card">
+                            <img class='test' src="./images/projects/learnjava.jpg">
+                            <h2>Learn To Code in Java</h2>
+                            <p>Photo Credit: Jessica Lewis</p>
+                            <p>
+                                In January 2019, I taught a one-week course on learning how to code in Java for students
+                                at Smith College. I have made videos, slides, and github repo accessible for anyone
+                                interested in learning!
+                            </p>
+                        </div>
+                        <div class="card">
+                            <img class='test' src="./images/projects/smithiesincs.jpeg">
+                        </div>
+                        <div class="card">
+                            <img class='test' src="./images/projects/computerscienceta.png">
+                        </div>
+
+                    </div>
             </div>
         </div>
 
