--- a/projects.html
+++ b/projects.html
@@ -193,10 +193,11 @@
                 </div>
             </div>
             <div class="other-works-section">
-                    <h1>Other Works + Resources</h1>
-                    <div class="other-works-grid">
-                        <div class="card">
-                            <img class='test' src="./images/projects/learnjava.jpg">
+                <h1>Other Works + Resources</h1>
+                <div class="other-works-grid">
+                    <div class="card">
+                        <img class="card-image" src="./images/projects/learnjava.jpg">
+                        <div class="card-info">
                             <h2>Learn To Code in Java</h2>
                             <p>Photo Credit: Jessica Lewis</p>
                             <p>
@@ -205,14 +206,44 @@
                                 interested in learning!
                             </p>
                         </div>
-                        <div class="card">
-                            <img class='test' src="./images/projects/smithiesincs.jpeg">
-                        </div>
-                        <div class="card">
-                            <img class='test' src="./images/projects/computerscienceta.png">
-                        </div>
-
                     </div>
+                    <div class="card">
+                        <picture>
+                            <source media="(max-width:600px)" srcset="./images/projects/smithiesincs_small.jpeg">
+                            <img class="card-image" src="./images/projects/smithiesincs.jpeg">
+                        </picture>
+                        <div class="card-info">
+                            <h2>Board Member of Smithies in Computer Science</h2>
+                            <p>
+                                I served as the Events Chair for Smithies in Computer Science in '17 and Vice President
+                                in
+                                '18. During my time in Smithies in CS, I worked with other members to organize events
+                                that
+                                would foster a sense of community in the CS department. We organized ice cream socials,
+                                coding workshops, and HackSmith, a hackathon for undergrad students in the Pioneer
+                                Valley.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <picture >
+                            <source media="(max-width:600px)" srcset="./images/projects/computerscienceta_small.png">
+                            <source  media="(min-width:601px)" srcset="./images/projects/computerscienceta.png">
+                        <img class="card-image" src="./images/projects/computerscienceta.png">
+                        </picture>
+                        <div class="card-info">
+                            <h2>Computer Science Teaching Assistant</h2>
+                            <p>
+                                I have also worked as a Teaching Assistant for Computer Science at Smith College,
+                                primarily
+                                tutoring Introduction to Data Structures. The course was taught in Java, and subsequent
+                                lecture videos were created to help students review lessons + notes they learned during
+                                class hours.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
 
