dynamically read more

--- a/projects.html
+++ b/projects.html
@@ -205,6 +205,7 @@
                                 at Smith College. I have made videos, slides, and github repo accessible for anyone
                                 interested in learning!
                             </p>
+                            <button class="read-more-btn">Read more</button>
                         </div>
                     </div>
                     <div class="card">
@@ -223,6 +224,7 @@
                                 coding workshops, and HackSmith, a hackathon for undergrad students in the Pioneer
                                 Valley.
                             </p>
+                            <button class="read-more-btn">Read more</button>
                         </div>
                     </div>
                     <div class="card">
@@ -240,6 +242,7 @@
                                 lecture videos were created to help students review lessons + notes they learned during
                                 class hours.
                             </p>
+                            <button class="read-more-btn">Read more</button>
                         </div>
                     </div>
 
@@ -248,7 +251,7 @@
         </div>
 
     </div>
-
+    <script src="./js/projects/scripts.js"></script>
 </body>
 
 </html>
